css/style.css
footer div {
    display: flex;
    max-width: fit-content;
    margin-left: auto;
    margin-right: auto;
    gap: 20px;
}

.content {
    padding: 15px;
    position: relative;
    width: 40%;
    top: 25%;
    left: 50%;
    transform: translate(-50%, 0);
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: 16px;
    word-wrap: break-word;
    line-height: 1.5;
}

.trigger {
    display: flex;    
    gap: 25px;
    margin-top: 15px;
}

.title-div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-image: url('/EclairPlayer/assets/screenshot.png');
    background-position: center;
    border-radius: 10px;
}
@media (width < 826px) {
    .title-div {
        background-image: none;
    }
}

